# auv_controllers

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  output.urdf  ros2.repos  testing.py
auv_control_demos/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
auv_control_demos/chained_controllers/: README.md
auv_control_demos/chained_controllers/config/: chained_controllers.yaml
auv_control_demos/chained_controllers/launch/: chaining.launch.py
auv_control_demos/chained_controllers/xacro/: chained.config.xacro  chained.model.xacro  chained.ros2_control.xacro  chained.urdf.xacro  chained_config.xacro  chained_ros2_control.xacro  chained_urdf.xacro
auv_control_demos/config/: chained_controllers.yaml
auv_control_demos/individual_controller/: README.md
auv_control_demos/individual_controller/config/: individual_controller.yaml
auv_control_demos/individual_controller/launch/: individual.launch.py
auv_control_demos/individual_controller/xacro/: individual.config.xacro  individual.ros2_control.xacro  individual_config.xacro  individual_ros2_control.xacro  individual_urdf.xacro
auv_control_demos/inverse_kinematics_solvers/: README.md
auv_control_demos/inverse_kinematics_solvers/config/: solver.yaml
auv_control_demos/launch/: chaining.launch.py  indvidual.launch.py
auv_control_demos/urdf/: chaining.urdf.xacro  individual.urdf.xacro  testing.urdf.xacro
auv_control_msgs/: CHANGELOG.md  CMakeLists.txt  package.xml
auv_control_msgs/action/: FollowCartesianTrajectory.action  FollowEndEffectorTrajectory.action  FollowGeometricTrajectory.action  FollowTrajectory.action
auv_control_msgs/msg/: CartesianTrajectory.msg  CartesianTrajectoryPoint.msg  EndEffectorTrajectory.msg  EndEffectorTrajectoryControllerState.msg  EndEffectorTrajectoryPoint.msg  GeometricTrajectory.msg  GeometricTrajectoryPoint.msg  IKControllerStateStamped.msg  ImpedanceCommand.msg  ImpedanceStateStamped.msg  MultiActuatorStateStamped.msg  Trajectory.msg  TrajectoryControllerStateStamped.msg  UvmsState.msg
auv_controllers/: CHANGELOG.md  CMakeLists.txt  package.xml
controller_common/: CHANGELOG.md  CMakeLists.txt  package.xml
controller_common/include/controller_common/: common.hpp
controller_common/src/: common.cpp
controller_coordinator/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
controller_coordinator/src/: coordinator.cpp  coordinator.hpp  coordinator_parameters.yaml
controller_testing/: CMakeLists.txt  package.xml
controller_testing/config/: controllers.yaml
controller_testing/launch/: testing.launch.py
controller_testing/urdf/: testing.urdf.xacro
end_effector_trajectory_controller/: CHANGELOG.md  CMakeLists.txt  README.md  end_effector_trajectory_controller.xml  package.xml
end_effector_trajectory_controller/include/end_effector_trajectory_controller/: end_effector_trajectory_controller.hpp  (+1 more)
end_effector_trajectory_controller/src/: end_effector_trajectory_controller.cpp  end_effector_trajectory_controller_parameters.yaml  trajectory.cpp
example_pkg/: CMakeLists.txt  package.xml
geometric_controllers/: CHANGELOG.md  CMakeLists.txt  README.md  geometric_controllers.xml  package.xml
geometric_controllers/src/: trajectory.cpp  trajectory_controller.cpp  trajectory_controller_parameters.yaml
ik_solvers/: CHANGELOG.md  CMakeLists.txt  README.md  ik_solvers.xml  package.xml  solvers.xml
ik_solvers/examples/: tpik_example.cpp
ik_solvers/src/: ik_solver.cpp  pseudoinverse.cpp  pseudoinverse.hpp  solver.cpp  task_priority_ik_solver.cpp  task_priority_solver.cpp  task_priority_solver_parameters.yaml
impedance_controller/: CHANGELOG.md  CMakeLists.txt  README.md  impedance_controller.xml  package.xml
impedance_controller/src/: impedance_controller.cpp  impedance_controller_parameters.yaml
mock_hardware/: CMakeLists.txt  mock_hardware.xml  package.xml
mock_hardware/src/: mock_hardware.cpp
solver_testing/: CMakeLists.txt  package.xml
solver_testing/src/: solver_node.cpp
thruster_allocation_matrix_controller/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  thruster_allocation_matrix_controller.xml
thruster_allocation_matrix_controller/src/: thruster_allocation_matrix_controller.cpp  thruster_allocation_matrix_controller_dos.cpp  thruster_allocation_matrix_controller_parameters.yaml  thruster_allocation_matrix_parameters.yaml
thruster_allocation_matrix_controller/test/: test_load_thruster_allocation_matrix_controller.cpp  test_thruster_allocation_matrix_controller.cpp  test_thruster_allocation_matrix_controller.hpp
thruster_controllers/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  thruster_controllers.xml
thruster_controllers/src/: gz_passthrough_controller.cpp  gz_passthrough_controller_parameters.yaml  polynomial_thrust_curve_controller.cpp  polynomial_thrust_curve_controller_parameters.yaml  rotation_rate_controller.cpp  rotation_rate_controller_parameters.yaml
topic_sensors/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  topic_sensors.xml
topic_sensors/src/: odom_sensor.cpp  odom_sensor_parameters.yaml
trajectory_controllers/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  trajectory_controllers.xml
trajectory_controllers/src/: cartesian_trajectory.cpp  cartesian_trajectory_controller.cpp  cartesian_trajectory_controller_parameters.yaml
velocity_controllers/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  velocity_controllers.xml
velocity_controllers/src/: adaptive_integral_terminal_sliding_mode_controller.cpp  adaptive_integral_terminal_sliding_mode_controller_parameters.yaml  integral_sliding_mode_controller.cpp  integral_sliding_mode_controller_parameters.yaml
velocity_controllers/test/: test_integral_sliding_mode_controller.hpp
whole_body_controllers/: CHANGELOG.md  CMakeLists.txt  README.md  ik_solvers.xml  package.xml  whole_body_controllers.xml
whole_body_controllers/src/: bleh.yaml  example_config.yaml  ik_controller.cpp  ik_controller_parameters.yaml  task_priority_ik_control.cpp  task_priority_ik_control_params.yaml
(+65 files in other folders)
