<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_control_demos</name>
  <version>0.0.1</version>
  <description>Example package that includes demos for using auv_controllers in individual and
    chained modes</description>

  <maintainer email="mitchcol@oregonstate.edu">Colin Mitchell</maintainer>
  <maintainer email="everardo.a.gonzalez@gmail.com">Everardo Gonzalez</maintainer>
  <maintainer email="rakeshvivek97@gmail.com">Rakesh Vivekanandan</maintainer>
  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/auv_controllers.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/auv_controllers/issues</url>

  <author>Colin Mitchell</author>
  <author>Everardo Gonzalez</author>
  <author>Rakesh Vivekanandan</author>
  <author>Evan Palmer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
