<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>auv_controllers</name>
  <version>0.0.1</version>
  <description>Meta package for auv_controllers</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/auv_controllers.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/auv_controllers/issues</url>

  <author>Evan Palmer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>thruster_allocation_matrix_controller</exec_depend>
  <exec_depend>thruster_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>auv_control_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
