<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>controller_coordinator</name>
  <version>0.3.1</version>
  <description>A high-level node used to load and activate/deactivate control systems</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/auv_controllers.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/auv_controllers/issues</url>

  <author>Evan Palmer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>generate_parameter_library</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
