<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>end_effector_trajectory_controller</name>
  <version>0.2.0</version>
  <description>End effector trajectory tracking controller for UVMS control</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/auv_controllers.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/auv_controllers/issues</url>

  <author>Evan Palmer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>generate_parameter_library</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_common</depend>
  <depend>auv_control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
