<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ik_solvers</name>
  <version>0.0.1</version>
  <description>Inverse kinematics solvers used for whole-body control</description>

  <maintainer email="evanp922@gmail.com">ros</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/auv_controllers.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/auv_controllers/issues</url>

  <author>Evan Palmer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>generate_parameter_library</depend>
  <depend>control_msgs</depend>
  <depend>pinocchio</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
