<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mock_hardware</name>
  <version>0.0.0</version>
  <description>A plugin interface to test auv_controllers</description>
  <maintainer email="everardo.a.gonzalez@gmail.com">Everardo Gonzalez</maintainer>
  <maintainer email="rakeshvivek97@gmail.com">Rakesh Vivekanandan</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/auv_controllers.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/auv_controllers/issues</url>

  <author>Everardo Gonzalez</author>
  <author>Rakesh Vivekanandan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
